adding tensorflow sample
Reviewed-by: jvernee, mcimadamore